# waterloo-bc-workshop-2023

./: .gitignore  Cargo.toml  README.md  build_contract.sh  install_near_cli.sh  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: events.rs  lib.rs  types.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
src/: lib.rs
tooling/indexer/: Cargo.toml  README.md
tooling/indexer/src/: block_downloader.rs  chunk_downloader.rs  config.rs  main.rs  manager.rs  receipt_handler.rs  types.rs
