[package]
name = "near-messenger-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
near-jsonrpc-client = "0.4"
near-jsonrpc-primitives = "0.15"
near-messenger = { path = "../../contract" }
near-primitives = "0.15"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
